--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <meta name="twitter:image" content="assets/me.jpg">
     <link rel="apple-touch-icon" href="assets/icon.png" />
 
-    <title>Muhammed Amer - Backend & System Design</title>
+    <title>Muhammed Amer</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/js/all.min.js"></script>
 
     <link rel="stylesheet" href="style.css" />
